# nitroshot

./: Cargo.toml  build.rs
src/: main.rs
src/components/: button.rs  image.rs  mod.rs
src/screenshot/: select.rs
src/ui/: button.60  main.60  preview.60  start.60
src/ui/components/: main_button.60  preview_button.60
style/: button.css
