[package]
name = "nitroshot"
version = "0.1.0"
edition = "2018"
resolver = "2"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sixtyfps = "0.1.2"
x11cap = "0.4.1"
hacksaw = { path = "libs/hacksaw" }

[build-dependencies]
sixtyfps-build = "0.1.2"
